--- a/modules/5507-01-videos.md
+++ b/modules/5507-01-videos.md
@@ -9,12 +9,12 @@ date: Created 2021-05-29
 #### M01-V01. Introducting your instructor
 
 + Video available in [Panopto format][m01v01]
-+ Slides available in [pdf format][git1]
++ Slides and speaker notesavailable in [pdf format][git1]
 
-#### M01-V02. History of SAS (8 minutes)
+#### M01-V02. Where you can get SAS
 
 + Video available in [Panopto format][m01v02]
-+ Slides are not available
++ See above for slides and speaker notes.
 
 #### M01-V03. Your first SAS program (10 minutes)
 
@@ -60,18 +60,27 @@ date: Created 2021-05-29
 [umk1]: https://www.umkc.edu/is/support/services/software/siteLicensed/SAS/Index.asp
 [umk2]: https://blogs.sas.com/content/sasdummy/2016/04/24/how-to-run-sas-programs-in-jupyter-notebook/
 
-[git1]: https://github.com/classes-medb/5507/blob/master/module01/results/slides-with-speaker-notes-01-01.pdf
-[git2]: https://github.com/pmean/introduction-to-SAS/blob/master/basics1/src/your-first-program.sas
-[git3]: https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/saved-pdf.sas
-[git4]: https://github.com/pmean/introduction-to-SAS/blob/master/basics1/src/saved-html.sas
-[git5]: https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/saved-pdf.sas
-[git6]: https://github.com/pmean/introduction-to-SAS/blob/master/basics1/src/saved-html.sas
-[git7]: https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/input-text.sas
+[git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m01-course-introduction.pdf
+[git2]: 
+[git3]: 
+[git4]: 
+[git5]: 
+[git6]: 
+[git7]: 
 
 [m01v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=700eeac6-121e-46d6-a080-ad4500e4c370
 [m01v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=a1030297-ab65-4916-a913-ad4500e5d72a
 [m01v03]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c9b57b4f-3c10-4452-846e-ad4500e79d1c
 [m01v04]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=581a095f-76d2-4cc4-9915-ad4500e9258b
-[m01V05]: 
-[m01V06]: 
+[m01V05]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7f15273f-eac7-44b0-8185-ad4500ec1910
+[m01V06]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8939958a-d768-45dc-b544-ad4500f6261a
+[m01v07]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=585aaf55-3c25-4e7d-969b-ad4500f74c55
+[m01v08]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e2e5c875-eb04-48c5-8764-ad4500f838ae
+
+[m01v03a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=1151e938-5f2c-4e76-bc0f-ad4500fb91a5
+[m01v05a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=0b8e1d29-5f3f-4b3e-94ca-ad4501006f02
+[m01v06a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=963be955-cb09-48d5-973b-ad45010475c7
+[m01v07a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=dea22af5-cc6f-4ec6-9034-ad4501080b71
+[m01v08a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8675ded2-f735-407b-87ef-ad4501107d0e
+
 
