Final tweaks for module01 videos

--- a/modules/5507-01-videos.md
+++ b/modules/5507-01-videos.md
@@ -16,31 +16,45 @@ date: Created 2021-05-29
 + Video available in [Panopto format][m01v02]
 + See above for slides and speaker notes.
 
-#### M01-V03. Your first SAS program (10 minutes)
+#### M01-V03. Your first SAS program
 
 + Video available in [Panopto format][m01V03]
 + Slides are not available
-+ your-first-program.sas is available in [text format][git2]
++ m01-5507-simon-basic-program.sas is available in [text format][git2]
++ Live demo available in [Panopto format][m01v03a]
 
-#### M01-V04. Storing SAS datasets using libname (12 minutes)
-
+#### M01-V04. History of SAS
 + Video available in [Panopto format][m01v04]
-+ Slides are not yet available
-+ permanent-storage.sas is available in [text format][git3]
-+ re-use.sas is available in [text format][git4]
++ See above for slides and speaker notes.
 
-#### M01-V05. Storing SAS output using ODS (15 minutes)
+#### M01-V05. Documentation header
 
 + Video available in [Panopto format][m01v05]
-+ Slides and speakers notes are not yet available
-+ saved-pdf.sas is available in [text format][git5]
-+ saved-html.sas is available in [text format][git6]
++ See above for slides and speaker notes.
++ m01-5507-simon-documentation-header is available in [text format][git3]
++ Live demo available in [Panopto format][m01v05a]
 
-#### M01-V06. Reading external data using infile and filename (13 minutes)
+#### M01-V06. Storing SAS datasets using libname
 
 + Video available in [Panopto format][m01v06]
++ See above for slides and speaker notes.
++ m01-5507-simon-permanent-storage.sas is available in [text format][git4]
++ m01-5507-simon-re-use.sas is available in [text format][git5]
++ Live demo available in [Panopto format][m01v06a]
+
+#### M01-V07. Storing SAS output using ODS
+
++ Video available in [Panopto format][m01v07]
 + Slides and speakers notes are not yet available
-+ input-text.sas is available in [text format][git7]
++ m01-5507-simon-save-output.sas is available in [text format][git6]
++ Live demo available in [Panopto format][m01v07a]
+
+#### M01-V08. Reading external data using infile and filename
+
++ Video available in [Panopto format][m01v08]
++ Slides and speakers notes are not yet available
++ m01-5507-simon-read-data.sas is available in [text format][git7]
++ Live demo available in [Panopto format][m01v08a]
 
 #### Recommended readings
 
@@ -50,23 +64,21 @@ date: Created 2021-05-29
 + SAS Institute. SAS University Edition. Available in [html format][sas2].
 + Simon, Stephen. Help! My Q: drive disappeared! Available in [pdf format][sim1]
 + UMKC. Site-Licensed Software, SAS for Windows. Available in [html format][umk1].
-+ UMKC. Student Computing Labs. Available in [html format][umk2].
 
 [hem1]: https://blogs.sas.com/content/sasdummy/2016/04/24/how-to-run-sas-programs-in-jupyter-notebook/
 [hem2]: https://www.ssc.wisc.edu/~hemken/SASworkshops/Markdown/SASmarkdown.html
 [sas1]: http://support.sas.com/training/sas94/m3_1.htm
 [sas2]: https://www.sas.com/en_us/software/university-edition.html
-[sim1]: https://github.com/pmean/introduction-to-SAS/blob/master/basics1/results/lost-drive.pdf
+[sim1]: https://github.com/pmean/introduction-to-sql/blob/master/results/m01-lost-drive.pdf
 [umk1]: https://www.umkc.edu/is/support/services/software/siteLicensed/SAS/Index.asp
-[umk2]: https://blogs.sas.com/content/sasdummy/2016/04/24/how-to-run-sas-programs-in-jupyter-notebook/
 
 [git1]: https://github.com/pmean/introduction-to-SAS/blob/master/results/m01-course-introduction.pdf
-[git2]: 
-[git3]: 
-[git4]: 
-[git5]: 
-[git6]: 
-[git7]: 
+[git2]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-basic-program.sas
+[git3]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-documentation-header.sas
+[git4]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-permanent-storage.sas
+[git5]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-re-use.sas
+[git6]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-save-output.sas
+[git7]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-read-data.sas
 
 [m01v01]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=700eeac6-121e-46d6-a080-ad4500e4c370
 [m01v02]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=a1030297-ab65-4916-a913-ad4500e5d72a
@@ -82,5 +94,4 @@ date: Created 2021-05-29
 [m01v06a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=963be955-cb09-48d5-973b-ad45010475c7
 [m01v07a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=dea22af5-cc6f-4ec6-9034-ad4501080b71
 [m01v08a]: https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8675ded2-f735-407b-87ef-ad4501107d0e
-
 
