--- a/modules/5507-01-hw.md
+++ b/modules/5507-01-hw.md
@@ -1,14 +1,21 @@
 ---
 title: "MEDB 5507, Introduction to SAS, Module01, Homework"
+author: Steve Simon
+date: Created 2021-06-13
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_dir = "../results", output_format = "all") }) 
 ---
 
-### Assignments, due start of week 3
+### Assignments, due start end of week 3 (week 2 in summer semester) 
 
 #### Hw01
 
-Graded: 3 points, one point deducted if submitted late.
+Graded: 20 points, one point deducted if submitted late.
 
-Take the code in your-first-program.sas and run it on your system. If you get an error message that you can't fix, document that error message in the text box. You will get full credit for any reasonable attempt to get the program to run. If your program ran successfully, describe your difficulties (if any) in getting the program to run. 
+Take the code in [m01-5507-simon-basic.sas][git1] and run it on your system. Be sure to change "simon" to your name. Optionally, and only if you can, include a documentation header, store the dataset in a permanent location, save your output in a pdf file, and/or read the data from a separate file.
+
+If you get an error message that you can't fix, submit your code and document that error message in the text box. You will get full credit for any reasonable attempt to get the program to run. Future assignments will use [this grading rubric][git2]. If your program ran successfully, describe your difficulties (if any) in getting the program to run in the text box. 
 
 #### Discuss01
 
@@ -18,3 +25,5 @@ Please briefly introduce yourself. Tell us a bit about yourself professionally, 
 
 Not available yet.
 
+[git1]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m01-5507-simon-basic-program.sas
+[git2]: https://github.com/pmean/classes/blob/master/software-engineering/src/grading-rubric.md
