--- a/modules/5507-02-hw.md
+++ b/modules/5507-02-hw.md
@@ -1,14 +1,52 @@
 ---
 title: "MEDB 5507, Introduction to SAS, Module02, Homework"
+author: Steve Simon
+date: Created 2021-06-13
+knit: (function(inputFile, encoding) {
+  rmarkdown::render(inputFile, encoding = encoding,
+  output_dir = "../results", output_format = "all") }) 
 ---
 
-### Assignments, due start of week 5
+### Assignments, due start of week 3 (week 2 during summer session)
 
-#### Hw02
+#### Hw02a
 
-Graded: 3 points, one point deducted if submitted late.
+Graded: 20 points, one point deducted if submitted late.
 
-Read the data in the file sleep.txt or in the file sleep_modified.txt and print out the first ten rows of data. Include your code and your output in a single PDF file.
+Take the program, [m02-5507-simon-cigarettes.sas][git1], and modify it so that
+
++ it has a documentation header,
++ it stores your dataset as a permanent file,
++ your output is stored as a pdf file, and
++ your data is in a file separate from the program
+
+Include your code and your output in a single PDF file. This assignment will be graded pass/fail, but future assignments will use [this grading rubric][git2]
+
+#### Hw02b
+
+Graded: 20 points, one point deducted if submitted late.
+
+Use the dataset from the previous homework assignment and answer the following questions:
+
+Q1. What brand has the highest tar?
+
+Q2. What drand has the lowest tar?
+
+Q3. What is the correlation between tar and nicotine? Interpret this correlation.
+
+Include your code and your output in a single PDF file. This assignment will use [this grading rubric][git2]
+
+#### Hw02c
+
+Graded: 20 points, one point deducted if submitted late.
+
+Use the dataset from the previous homework assignment and answer the following questions:
+
+Q4. Draw a histogram for tar, nicotine, weight, and co. Do these histograms provide evidence that the data follows a classic bell shaped curve?
+
+Q5. Draw a scatterplot showing the relationship between tar and nicotine (tar on the x-axis, nicotine on the y-axis). Include a linear trend line. Is there a positive or negative relationship between these two variables.
+
+Include your code and your output in a single PDF file. This assignment will use [this grading rubric][git2]
 
 #### Discuss02
 
@@ -27,3 +65,7 @@ I'd like some brief feedback to the videos you just watched. Keep it short. One 
 Graded: 3 points, one point deducted if submitted late.
 
 Not yet available.
+
+
+[git1]: https://github.com/pmean/introduction-to-SAS/blob/master/src/m02-5507-simon-cigarettes.sas
+[git2]: https://github.com/pmean/classes/blob/master/software-engineering/src/grading-rubric.md
